gcc/testsuite/gcc.dg/noncompile/20001228-1.c
void rof(void)
{
  union { int a; } u;
  for (u.a = 0; u; u.a++)  /* { dg-error "invalid operand" } */
    ;
}
